<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">citron-neo: The switch fell off</string>
    <string name="app_disclaimer">This software will run games for the Nintendo Switch game console. No game titles or keys are included.&lt;br /&gt;&lt;br /&gt;Before you begin, please locate your <![CDATA[<b> prod.keys </b>]]> file on your device storage.&lt;br /&gt;&lt;br /&gt;For support, please visit discord.gg/axqZFEyzPQ</string>
    <string name="notice_notification_channel_name">Notices and errors</string>
    <string name="notice_notification_channel_id" translatable="false">noticesAndErrors</string>
    <string name="notice_notification_channel_description">Shows notifications when something goes wrong.</string>
    <string name="notification_permission_not_granted">Notification permission not granted!</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_description">Learn how to setup &lt;b>citron&lt;/b> and jump into emulation.</string>
    <string name="get_started">Get started</string>
    <string name="keys">Keys</string>
    <string name="keys_description">Select your &lt;b>prod.keys&lt;/b> file with the button below.</string>
    <string name="select_keys">Select Keys</string>
    <string name="games">Games</string>
    <string name="games_description">Select your &lt;b>Games&lt;/b> folder with the button below.</string>
    <string name="done">Done</string>
    <string name="done_description">You\'re all set.\nEnjoy your games!</string>
    <string name="text_continue">Continue</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="add_games">Add Games</string>
    <string name="add_games_description">Select your games folder</string>
    <string name="step_complete">Complete!</string>
    <string name="home_games">Games</string>
    <string name="home_search">Search</string>
    <string name="home_multiplayer">Multiplayer</string>
    <string name="home_settings">Settings</string>
    <string name="empty_gamelist">No files were found or no game directory has been selected yet.</string>
    <string name="search_and_filter_games">Search and filter games</string>
    <string name="switch_to_list_view">Switch to list view</string>
    <string name="switch_to_grid_view">Switch to grid view</string>
    <string name="switch_to_compact_grid_view">Switch to compact grid view</string>
    <string name="select_games_folder">Select games folder</string>
    <string name="manage_game_folders">Manage game folders</string>
    <string name="select_games_folder_description">Allows citron to populate the games list</string>
    <string name="add_games_warning">Skip selecting games folder?</string>
    <string name="add_games_warning_description">Games won\'t be displayed in the Games list if a folder isn\'t selected.</string>
    <string name="add_games_warning_help">https://discord.gg/axqZFEyzPQ</string>
    <string name="home_search_games">Search games</string>
    <string name="search_settings">Search settings</string>
    <string name="games_dir_selected">Games directory selected</string>
    <string name="install_prod_keys">Install prod/title keys</string>
    <string name="install_prod_keys_description">Required to decrypt retail games and installed content</string>
    <string name="install_prod_keys_warning">Skip adding keys?</string>
    <string name="install_prod_keys_warning_description">Valid keys are required to emulate retail games. Only homebrew apps will function if you continue.</string>
    <string name="install_prod_keys_warning_help">https://discord.gg/axqZFEyzPQ</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_description">Grant the notification permission with the button below.</string>
    <string name="give_permission">Grant permission</string>
    <string name="notification_warning">Skip granting the notification permission?</string>
    <string name="notification_warning_description">citron won\'t be able to notify you of important information.</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_denied_description">You denied this permission too many times and now you have to manually grant it in system settings.</string>
    <string name="about">About</string>
    <string name="about_description">Build version, credits, and more</string>
    <string name="warning_help">Help</string>
    <string name="warning_skip">Skip</string>
    <string name="warning_cancel">Cancel</string>
    <string name="install_amiibo_keys">Install Amiibo keys</string>
    <string name="install_amiibo_keys_description">Required to decrypt encrypted Amiibo BIN dumps</string>
    <string name="invalid_keys_file">Invalid keys file selected</string>
    <string name="install_keys_success">Keys successfully installed</string>
    <string name="reading_keys_failure">Error reading encryption keys</string>
    <string name="install_prod_keys_failure_extension_description">Verify your keys file has a .keys extension and try again.</string>
    <string name="install_amiibo_keys_failure_extension_description">Verify your keys file has a .bin extension and try again.</string>
    <string name="install_amiibo_keys_invalid_description">Select a valid 160-byte key_retail.bin containing the Amiibo unfixed-info and locked-secret keys.</string>
    <string name="invalid_keys_error">Invalid encryption keys</string>
    <string name="dumping_keys_quickstart_link">https://discord.gg/axqZFEyzPQ</string>
    <string name="install_keys_failure_description">The selected file is incorrect or corrupt. Please redump your keys.</string>
    <string name="gpu_driver_manager">GPU driver manager</string>
    <string name="install_gpu_driver">Install GPU driver</string>
    <string name="install_gpu_driver_description">Install alternative drivers for potentially better performance or accuracy</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="advanced_settings_game">Advanced settings: %1$s</string>
    <string name="settings_description">Configure emulator settings</string>
    <string name="search_recently_played">Recently played</string>
    <string name="search_recently_added">Recently added</string>
    <string name="search_retail">Retail</string>
    <string name="search_homebrew">Homebrew</string>
    <string name="open_user_folder">Open citron folder</string>
    <string name="open_user_folder_description">Manage citron\'s internal files</string>
    <string name="theme_and_color_description">Modify the look of the app</string>
    <string name="no_file_manager">No file manager found</string>
    <string name="notification_no_directory_link">Could not open citron directory</string>
    <string name="notification_no_directory_link_description">Please locate the user folder with the file manager\'s side panel manually.</string>
    <string name="manage_save_data">Manage save data</string>
    <string name="manage_save_data_description">Save data found. Please select an option below.</string>
    <string name="import_save_warning">Import save data</string>
    <string name="import_save_warning_description">This will overwrite all existing save data with the provided file. Are you sure that you want to continue?</string>
    <string name="import_export_saves_description">Import or export save files</string>
    <string name="save_files_importing">Importing save files…</string>
    <string name="save_files_exporting">Exporting save files…</string>
    <string name="save_file_imported_success">Imported successfully</string>
    <string name="save_file_invalid_zip_structure">Invalid save directory structure</string>
    <string name="save_file_invalid_zip_structure_description">The first subfolder name must be the title ID of the game.</string>
    <string name="import_saves">Import</string>
    <string name="export_saves">Export</string>
    <string name="install_firmware">Install firmware</string>
    <string name="install_firmware_description">Firmware must be in a ZIP archive and is needed to boot some games</string>
    <string name="firmware_installing">Installing firmware</string>
    <string name="firmware_installed_success">Firmware installed successfully</string>
    <string name="firmware_installed_failure">Firmware installation failed</string>
    <string name="firmware_installed_failure_description">Make sure the firmware nca files are at the root of the zip and try again.</string>
    <string name="share_log">Share debug logs</string>
    <string name="share_log_description">Share citron\'s log file to debug issues</string>
    <string name="share_log_missing">No log file found</string>
    <string name="install_game_content">Install game content</string>
    <string name="install_game_content_description">Install game updates or DLC</string>
    <string name="installing_game_content">Installing content…</string>
    <string name="install_game_content_failure">Error installing file(s) to NAND</string>
    <string name="install_game_content_failure_description">Please ensure content(s) are valid and that the prod.keys file is installed.</string>
    <string name="install_game_content_failure_base">Installation of base games isn\'t permitted in order to avoid possible conflicts.</string>
    <string name="install_game_content_failure_file_extension">Only NSP and XCI content is supported. Please verify the game content(s) are valid.</string>
    <string name="install_game_content_failed_count">%1$d installation error(s)</string>
    <string name="install_game_content_success">Game content(s) installed successfully</string>
    <string name="install_game_content_success_install">%1$d installed successfully</string>
    <string name="install_game_content_success_overwrite">%1$d overwritten successfully</string>
    <string name="install_game_content_help_link">https://discord.gg/axqZFEyzPQ</string>
    <string name="custom_driver_not_supported">Custom drivers not supported</string>
    <string name="custom_driver_not_supported_description">Custom driver loading isn\'t currently supported for this device.\nCheck this option again in the future to see if support was added!</string>
    <string name="manage_citron_data">Manage citron data</string>
    <string name="airplane_mode">Airplane Mode</string>
    <string name="airplane_mode_multiplayer_description">Disable network functionality. Creating or joining a room turns this off automatically.</string>
    <string name="direct_connect">Direct Connect</string>
    <string name="direct_connect_port">Port</string>
    <string name="direct_connect_nickname">Nickname</string>
    <string name="direct_connect_password">Password (optional)</string>
    <string name="multiplayer_ascii_identifier_hint">4–20 ASCII letters, numbers, spaces, or . _ - only</string>
    <string name="host_room_unlisted">Create Unlisted Room</string>
    <string name="host_room_name">Room name</string>
    <string name="host_room_description">Room description (optional)</string>
    <string name="host_room_max_players">Max players</string>
    <string name="multiplayer_status">Status</string>
    <string name="multiplayer_status_disconnected">Not connected</string>
    <string name="multiplayer_actions_description">Create or join a room before starting a game. Room names and nicknames are protocol identifiers and only support ASCII; descriptions and chat support international text.</string>
    <string name="room_open">Open Current Room</string>
    <string name="room_members">Members</string>
    <string name="room_chat">Chat</string>
    <string name="room_message">Message</string>
    <string name="room_send">Send</string>
    <string name="room_leave">Leave Room</string>
</resources>